[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.1.0"
description = "A powerful PDF editor and processor"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.0.0",
    "pymupdf>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "langdetect>=1.0.9",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
quill = "quill.cli:app"

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
]
sign = [
    "pyhanko>=0.21.0",
]
convert = [
    "img2pdf>=0.5.0",
    "pymupdf4llm>=0.0.5",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
all = ["quill[ocr,sign,convert,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
